--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,26 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="MenuItemSelected">
+        <item name="android:textSize">28sp</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">32dp</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="MenuItemNotSelected">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">24dp</item>
+        <item name="android:textColor">@color/colorGray</item>
     </style>
 
 </resources>
