--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="poster_width">128dp</dimen>
     <dimen name="poster_height">176dp</dimen>
+    <dimen name="actor_photo_width">120dp</dimen>
+    <dimen name="actor_photo_height">160dp</dimen>
 </resources>
