--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -11,13 +11,14 @@
 
     <RelativeLayout
             android:id="@+id/searchContainer"
-            android:layout_width="328dp"
+            android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@drawable/shape_search_background"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginVertical="18dp"
+            android:layout_marginHorizontal="20dp"
             android:layout_centerHorizontal="true"
             android:animateLayoutChanges="true">
 
